<resources>
    <string name="app_name">Wearsic</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="queue">Queue</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="skip_next">Skip to next</string>
    <string name="skip_previous">Skip to previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="no_tracks">No tracks found</string>
    <string name="dismiss">Dismiss</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="load_more">Load more</string>
    <string name="like_playlist">Like playlist</string>
    <string name="unlike_playlist">Unlike playlist</string>
    <string name="retry">Retry</string>
    <string name="tap_again_to_confirm">Tap again to confirm</string>
</resources>
